# lagoon-sync

./: .env.example  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: create_image_manifest.py
src/lagoon_sync/: __init__.py  cli.py  config.py  controller.py  db.py  exceptions.py  pipeline.py  signals.py  worker.py
tests/: conftest.py  docker-compose.yml
tests/e2e/: test_e2e.py
tests/unit/: test_cli.py  test_controller.py  test_db.py
